--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/flex": "^2",
         "symfony/form": "7.1.*",
         "symfony/framework-bundle": "7.1.*",
+        "symfony/intl": "7.1.*",
         "symfony/mailer": "7.1.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "7.1.*",
@@ -35,6 +36,7 @@
         "symfony/debug-bundle": "7.1.*",
         "symfony/maker-bundle": "^1.60",
         "symfony/stopwatch": "7.1.*",
+        "symfony/var-dumper": "7.1.*",
         "symfony/web-profiler-bundle": "7.1.*"
     },
     "config": {
