--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@
 
 /.TODO.md
 /TODO.md
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+
+xdebug-*/
+claude.txt
