--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "symfony/security-bundle": "7.1.*",
         "symfony/serializer": "7.1.*",
         "symfony/twig-bundle": "7.1.*",
+        "symfony/ux-live-component": "^2.26",
         "symfony/validator": "7.1.*",
+        "symfony/webpack-encore-bundle": "^2.3",
         "symfony/yaml": "7.1.*",
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
