--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "easycorp/easyadmin-bundle": "^4.18",
         "php-cs-fixer/shim": "^3.63",
         "symfony/asset": "7.1.*",
         "symfony/console": "7.1.*",
