--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    # Set application timezone to Sofia (UTC+2/UTC+3 with DST)
+    app.timezone: 'Europe/Sofia'
 
 services:
     # default configuration for services in *this* file
