--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
-        "easycorp/easyadmin-bundle": "^4.18",
+        "easycorp/easyadmin-bundle": "4.18.0",
         "php-cs-fixer/shim": "^3.63",
         "symfony/asset": "7.1.*",
         "symfony/console": "7.1.*",
@@ -32,7 +32,7 @@
         "symfony/yaml": "7.1.*",
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "3.15.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
