--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@
 /.php-cs-fixer.php
 /.php-cs-fixer.cache
 ###< php-cs-fixer/shim ###
+
+.DS_Store
+./DS_Store
+/.idea/*
+claude.txt
+public/assets/.DS_Store
+public/build/
+node_modules/
+TODO.md
