--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=d6ac4efcc508b6a7f1af3d069fc41a96
+APP_ENV=prod
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -27,8 +27,8 @@ APP_SECRET=d6ac4efcc508b6a7f1af3d069fc41a96
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
-#DATABASE_URL="mysql://root:neam-nervi@127.0.0.1:3306/starshop?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:neam-nervi@127.0.0.1:3306/barber_shop?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/barber_shop?serverVersion=8.0.32&charset=utf8mb4"
+
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
