--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 ###> symfony/framework-bundle ###
-/.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -14,20 +13,11 @@
 /.php-cs-fixer.cache
 ###< php-cs-fixer/shim ###
 
-###> IDE and OS files ###
-/.idea/
 .DS_Store
-###< IDE and OS files ###
-
-/.TODO.md
-/TODO.md
-###> symfony/webpack-encore-bundle ###
-/node_modules/
-/public/build/
-npm-debug.log
-yarn-error.log
-###< symfony/webpack-encore-bundle ###
-
-xdebug-*/
+.idea/*
+TODO.md
 claude.txt
-dump.html
+node_modules/
+public/build/
+public/assets/.DS_Store
+public/assets/img/.DS_Store
