--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 ###> symfony/framework-bundle ###
 .env
-/.env
-/.env.local
-/.env.local.php
-/.env.*.local
+.env.local
+.env.local.php
+.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
@@ -16,10 +15,16 @@
 ###< php-cs-fixer/shim ###
 
 .DS_Store
-.idea/*
+.idea/
 TODO.md
 claude.txt
 node_modules/
 public/build/
 public/assets/.DS_Store
 public/assets/img/.DS_Store
+.phpunit.cache/
+.phpunit.result.cache
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache/
+###< phpunit/phpunit ###
