--- a/composer.json
+++ b/composer.json
@@ -13,34 +13,37 @@
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "4.18.0",
         "php-cs-fixer/shim": "^3.63",
-        "symfony/asset": "7.1.*",
-        "symfony/console": "7.1.*",
-        "symfony/dotenv": "7.1.*",
+        "symfony/asset": "7.3.*",
+        "symfony/console": "7.3.*",
+        "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
-        "symfony/form": "7.1.*",
-        "symfony/framework-bundle": "7.1.*",
-        "symfony/intl": "7.1.*",
-        "symfony/mailer": "7.1.*",
+        "symfony/form": "7.3.*",
+        "symfony/framework-bundle": "7.3.*",
+        "symfony/intl": "7.3.*",
+        "symfony/mailer": "7.3.*",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/runtime": "7.1.*",
-        "symfony/security-bundle": "7.1.*",
-        "symfony/serializer": "7.1.*",
-        "symfony/twig-bundle": "7.1.*",
+        "symfony/runtime": "7.3.*",
+        "symfony/security-bundle": "7.3.*",
+        "symfony/serializer": "7.3.*",
+        "symfony/twig-bundle": "7.3.*",
         "symfony/ux-live-component": "^2.26",
-        "symfony/validator": "7.1.*",
+        "symfony/validator": "7.3.*",
         "symfony/webpack-encore-bundle": "^2.3",
-        "symfony/yaml": "7.1.*",
+        "symfony/yaml": "7.3.*",
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "3.15.0"
+        "twig/twig": "^3.21"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
-        "symfony/debug-bundle": "7.1.*",
+        "phpunit/phpunit": "^11.5",
+        "symfony/browser-kit": "7.3.*",
+        "symfony/css-selector": "7.3.*",
+        "symfony/debug-bundle": "7.3.*",
         "symfony/maker-bundle": "^1.60",
-        "symfony/stopwatch": "7.1.*",
-        "symfony/var-dumper": "7.1.*",
-        "symfony/web-profiler-bundle": "7.1.*"
+        "symfony/stopwatch": "7.3.*",
+        "symfony/var-dumper": "7.3.*",
+        "symfony/web-profiler-bundle": "7.3.*"
     },
     "config": {
         "allow-plugins": {
@@ -88,7 +91,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.1.*"
+            "require": "7.3.*"
         }
     }
 }
