--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,3 +24,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Email Service Configuration
+    App\Service\EmailService:
+        arguments:
+            $senderEmail: '%env(MAILER_NOREPLY_EMAIL)%'
+            $senderName: '%env(MAILER_FROM_NAME)%'
