--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,5 +1,7 @@
 framework:
-    default_locale: en
-    translator:
-        default_path: '%kernel.project_dir%/translations'
-        providers:
+  default_locale: bg
+  enabled_locales: ['bg', 'en']
+  translator:
+      default_path: '%kernel.project_dir%/translations'
+      fallbacks: ['bg']
+      providers:
