--- a/.env
+++ b/.env
@@ -15,8 +15,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=
+APP_ENV=prod
+APP_DEBUG=0
+APP_SECRET=your_secret_here
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -27,7 +28,8 @@ APP_SECRET=
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/barber_shop?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL=mysql://user:password@host:3306/database_name
+MAILER_DSN=null://null
 
 ###< doctrine/doctrine-bundle ###
 
