Add production Dockerfile, dockerignore, and mailer config

--- a/.env
+++ b/.env
@@ -30,6 +30,8 @@ APP_SECRET=your_secret_here
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 DATABASE_URL=mysql://user:password@host:3306/database_name
 MAILER_DSN=null://null
+MAILER_NOREPLY_EMAIL="blocklangextension@gmail.com"
+MAILER_NOREPLY_NAME="Barber Shop"
 
 ###< doctrine/doctrine-bundle ###
 
