--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .env.local
 .env.local.php
 .env.*.local
+.env.docker
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
@@ -18,6 +19,7 @@
 .idea/
 TODO.md
 claude.txt
+command.md
 node_modules/
 public/build/
 public/assets/.DS_Store
