--- a/Dockerfile.postgres
+++ b/Dockerfile.postgres
@@ -1,9 +1,10 @@
 FROM postgres:16
 
+# Seed data now loaded via Doctrine migrations instead of SQL files
 # Copy SQL seed files to initialization directory
 # PostgreSQL automatically executes *.sql files in /docker-entrypoint-initdb.d/ on first run
-COPY data/barbers_postgres.sql /docker-entrypoint-initdb.d/01_barbers.sql
-COPY data/procedures_postgres.sql /docker-entrypoint-initdb.d/02_procedures.sql
+# COPY data/barbers_postgres.sql /docker-entrypoint-initdb.d/01_barbers.sql
+# COPY data/procedures_postgres.sql /docker-entrypoint-initdb.d/02_procedures.sql
 
 # The files will be executed in alphabetical order (01, 02)
 # This ensures barbers (users) are loaded before procedures
