--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./data/barbers_postgres.sql:/docker-entrypoint-initdb.d/01_barbers.sql
-      - ./data/procedures_postgres.sql:/docker-entrypoint-initdb.d/02_procedures.sql
+      # Seed data now loaded via Doctrine migration instead of SQL files
+      # - ./data/barbers_postgres.sql:/docker-entrypoint-initdb.d/01_barbers.sql
+      # - ./data/procedures_postgres.sql:/docker-entrypoint-initdb.d/02_procedures.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
