add calendar improvement and timezone migration   Major changes:   - Migrate all datetime fields to TIMESTAMPTZ (timezone-aware)   - Add read-only mode for past dates in barber calendar   - Fix excluded slots counting in total available slots   - Add backend validation to prevent editing past dates   - Past dates show original status with lock icon   - Add USER_GUIDE.md documentation   - Add manager barber schedules management   - Multiple UI/UX improvements

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "4.18.0",
+        "nelmio/security-bundle": "^3.6",
         "php-cs-fixer/shim": "^3.63",
         "symfony/asset": "7.3.*",
         "symfony/console": "7.3.*",
