add calendar button

--- a/.env
+++ b/.env
@@ -32,6 +32,8 @@ DATABASE_URL=mysql://user:password@host:3306/database_name
 MAILER_DSN=null://null
 MAILER_NOREPLY_EMAIL="blocklangextension@gmail.com"
 MAILER_NOREPLY_NAME="Barber Shop"
+CONTACT_EMAIL="contact@barber.com"
+CONTACT_PHONE="+359 XXX XXX XXX"
 
 ###< doctrine/doctrine-bundle ###
 
